Fix image stretching

--- a/src/styles/blog-post.scss
+++ b/src/styles/blog-post.scss
@@ -55,6 +55,7 @@
       }
 
       .image-column {
+        align-items: flex-start;
         display: flex;
         justify-content: center;
 
